# kafka-rust

./: AGENTS.md  opencode.json  prompt.md
connect-rust/: Cargo.toml
connect-rust/certs/: test-cert.pem  test-key.pem  test-keystore.p12
connect-rust/common-trait/: Cargo.toml
connect-rust/common-trait/src/: config.rs  configurable.rs  kafka_exception.rs  lib.rs  topic_partition.rs
connect-rust/common-trait/src/cache/: cache.rs  lru_cache.rs  mod.rs  synchronized_cache.rs
connect-rust/common-trait/src/config/: abstract_config.rs  client_configs.rs  config.rs  config_def.rs  config_def_importance.rs  config_def_type.rs  config_def_width.rs  config_provider.rs  config_value.rs  mod.rs  validators.rs
connect-rust/common-trait/src/errors/: config_exception.rs  connect_error.rs  mod.rs  serialization_exception.rs
connect-rust/common-trait/tests/: config_test.rs
connect-rust/connect-api/: Cargo.toml
connect-rust/connect-api/src/: config.rs  connector.rs  connector_impl.rs  connector_types.rs  data.rs  data.rs.backup  error.rs  lib.rs  policy.rs  rest.rs  sink_record.rs
connect-rust/connect-api/tests/: config_test.rs  connector_test.rs  error_test.rs  field_test.rs  schema_builder_test.rs  struct_test.rs
connect-rust/connect-basic-auth-extension/: COMPLETENESS_AND_CORRECTNESS_REPORT.md  Cargo.toml  FINAL_COMPLETENESS_AND_CORRECTNESS_REPORT.md
connect-rust/connect-basic-auth-extension/src/: auth.rs  basic_auth_callback_handler.rs  basic_auth_credentials.rs  basic_auth_security_provider.rs  error.rs  jaas.rs  jaas_basic_auth_filter.rs  lib.rs  property_file_login_module.rs  request_matcher.rs  rest.rs
connect-rust/connect-basic-auth-extension/tests/: auth_test.rs  basic_auth_security_rest_extension_test.rs  property_file_login_module_test.rs
connect-rust/connect-json/: Cargo.toml
connect-rust/connect-json/src/: decimal_format.rs  json_converter.rs  json_converter_config.rs  json_deserializer.rs  json_schema.rs  json_serializer.rs  lib.rs
connect-rust/connect-json/tests/: decimal_format_test.rs  json_converter_config_test.rs  json_converter_test.rs  json_deserializer_test.rs  json_schema_test.rs  json_serializer_test.rs
connect-rust/connect-mirror/: Cargo.toml  offset_sync_writer.long-type-1448461650026403097.txt
connect-rust/connect-mirror-client/: Cargo.toml  fix_client.py
connect-rust/connect-mirror-client/src/: client.rs  lib.rs  models.rs  models.rs.backup  policy.rs  protocol.rs  utils.rs
connect-rust/connect-mirror-client/tests/: checkpoint_test.rs  heartbeat_test.rs  mirror_client_config_test.rs  mirror_client_test.rs  remote_cluster_utils_test.rs  replication_policy_test.rs  source_and_target_test.rs
connect-rust/connect-mirror/src/: checkpoint.rs  checkpoint_connector_impl.rs  checkpoint_store.rs  checkpoint_task_impl.rs  config.rs  connector.rs  filter.rs  heartbeat_connector_impl.rs  heartbeat_task_impl.rs  lib.rs  maker.rs  maker_impl.rs  mirror_connector.rs  mirror_herder.rs  mirror_maker.rs  mirror_maker_config.rs  offset_sync_store.rs  offset_sync_writer.rs  scheduler.rs  scheduler_test.rs  source_connector_impl.rs  source_task_impl.rs  task.rs  utils.rs
connect-rust/connect-mirror/tests/: checkpoint_test.rs  config_sync_test.rs  config_test.rs  connector_lifecycle_test.rs  data_replication_test.rs  heartbeat_test.rs  maker_herder_integration_test.rs  maker_test.rs  mirror_checkpoint_connector_test.rs  mirror_checkpoint_task_test.rs  mirror_connector_config_test.rs  mirror_heartbeat_connector_test.rs  mirror_heartbeat_task_test.rs  mirror_source_config_test.rs  mirror_source_connector_test.rs  mirror_source_task_test.rs  mirror_utils_test.rs  mocks_test.rs  offset_translation_test.rs  scheduler_test.rs
connect-rust/connect-runtime/: Cargo.toml
connect-rust/connect-runtime-core/: Cargo.toml
connect-rust/connect-runtime-core/src/: config.rs  embedded_cluster.rs  errors.rs  herder.rs  isolation.rs  kafka_config_store.rs  kafka_offset_store.rs  kafka_status_store.rs  lib.rs  metrics.rs  plugin_macro.rs  plugin_registry.rs  storage.rs  worker.rs
connect-rust/connect-runtime-core/tests/: herder_test.rs  storage_integration_test.rs  storage_test.rs  worker_herder_integration_test.rs  worker_test.rs
connect-rust/connect-runtime-distributed/: Cargo.toml
connect-rust/connect-runtime-distributed/src/: assignor.rs  coordination.rs  herder.rs  lib.rs
connect-rust/connect-runtime-distributed/tests/: assignor_test.rs  coordination_test.rs  herder_test.rs
connect-rust/connect-runtime/src/: completable_future.rs  completable_future_test.rs  lib.rs
connect-rust/connect-runtime/tests/: mod.rs
connect-rust/connect-test-plugins/: Cargo.toml
connect-rust/connect-test-plugins/src/: lib.rs  mock_connector.rs  mock_sink_connector.rs  mock_sink_task.rs  mock_source_connector.rs  mock_source_task.rs  schema_source_connector.rs  schema_source_task.rs  verifiable_sink_connector.rs  verifiable_sink_task.rs  verifiable_source_connector.rs  verifiable_source_task.rs
connect-rust/connect-transforms/: Cargo.toml
connect-rust/connect-transforms/src/: cast_impl.rs  complex.rs  complex.rs.full  extract_field.rs  field.rs  flatten.rs  header_from.rs  hoist_field.rs  insert_field.rs  lib.rs  predicate.rs  regex_router.rs  set_schema_metadata.rs  simple.rs  simple.rs.bak  simple.rs.bak2  transformation.rs  util.rs
connect-rust/connect-transforms/tests/: complex_test.rs  predicate_test.rs  regex_router_test.rs  set_schema_metadata_test.rs  simple_test.rs  transforms_test.rs
connect-rust/kafka-clients-mock/: Cargo.toml
connect-rust/kafka-clients-mock/src/: admin.rs  config.rs  consumer.rs  consumer_record.rs  isolation_level.rs  kafka_consumer.rs  kafka_producer.rs  lib.rs  offset_and_metadata.rs  offset_commit_callback.rs  producer.rs  producer_record.rs  record_metadata.rs  serialization.rs
connect-rust/kafka-clients-trait/: Cargo.toml
connect-rust/kafka-clients-trait/src/: admin.rs  checkpoint.rs  config.rs  connect.rs  consumer.rs  lib.rs  producer.rs  serialization.rs
connect-rust/kafka-clients-trait/tests/: config_test.rs
(+475 files in other folders)
