[workspace]
members = [
    "common-trait",
    "kafka-clients-mock",
    "connect-api",
    "connect-json",
    "connect-transforms",
    "connect-mirror-client",
    "connect-mirror",
    "connect-basic-auth-extension",
    "connect-runtime",
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
