[package]
name = "connect-basic-auth-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
connect-api = { path = "../connect-api" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
regex = "1.10"
once_cell = "0.2"
tempfile = "3"

[dev-dependencies]
