[package]
name = "connect-mirror-client"
version = "0.1.0"
edition = "2021"

[dependencies]
common-trait = { path = "../common-trait" }
# connect-api = { path = "../connect-api" }  # Temporarily disabled due to pre-existing compilation errors
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
