[package]
name = "connect-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
connect-api = { path = "../connect-api" }
connect-mirror-client = { path = "../connect-mirror-client" }
connect-runtime = { path = "../connect-runtime" }
common-trait = { path = "../common-trait" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
kafka-clients-mock = { path = "../kafka-clients-mock" }

[[test]]
name = "config_test"
path = "tests/config_test.rs"

[[test]]
name = "mm2_integration_test"
path = "tests/e2e/mm2_integration_test.rs"
