[package]
name = "connect-runtime-core"
version = "0.1.0"
edition = "2021"

[dependencies]
connect-api = { path = "../connect-api" }
connect-transforms = { path = "../connect-transforms" }
kafka-clients-trait = { path = "../kafka-clients-trait" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
