[package]
name = "connect-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
connect-api = { path = "../connect-api" }
common-trait = { path = "../common-trait" }
kafka-clients-mock = { path = "../kafka-clients-mock" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
indexmap = "2.0"
dashmap = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.10"
