[package]
name = "connect-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
connect-api = { path = "../connect-api" }
common-trait = { path = "../common-trait" }
kafka-clients-mock = { path = "../kafka-clients-mock" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
dashmap = "5.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
thiserror = "1.0"
log = "0.4"
lazy_static = "1.4"
# Crypto dependencies for request signing
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
wiremock = "0.5"
tempfile = "3.5"
indexmap = "2.0"
