[package]
name = "connect-test-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
connect-api = { path = "../connect-api" }
common-trait = { path = "../common-trait" }
kafka-clients-mock = { path = "../kafka-clients-mock" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
log = "0.4"

[dev-dependencies]
tempfile = "3.5"