[package]
name = "connect-transforms"
version = "0.1.0"
edition = "2021"

[dependencies]
connect-api = { path = "../connect-api" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
chrono = "0.4"
base64 = "0.21"
